--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>agaStupak</groupId>
-  <artifactId>pl.agaStupak</artifactId>
+  <artifactId>quickstart</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <name>pl.agaStupak</name>
@@ -24,6 +24,11 @@
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.6</version>
     </dependency>
   </dependencies>
 
